--- a/notebook/example3.ipynb
+++ b/notebook/example3.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,8 +211,23 @@
       "Creating the objcet of demo thread class \n",
       "strting the demo thread\n",
       "Demo thread started \n",
-      "I was called by Thread\n",
       "thread has completed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread demo_thread:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Ankith\\machine_learning_project\\venv\\lib\\threading.py\", line 917, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\Ankith\\AppData\\Local\\Temp\\ipykernel_3560\\2559712820.py\", line 13, in run\n",
+      "    self.print_msg()\n",
+      "  File \"C:\\Users\\Ankith\\AppData\\Local\\Temp\\ipykernel_3560\\2559712820.py\", line 9, in print_msg\n",
+      "    time.sleep(2)\n",
+      "NameError: name 'time' is not defined\n",
+      "\n"
      ]
     }
    ],
@@ -229,11 +244,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=DemoThread()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ill not wait for the sequence ill execute regardless becoz of thread being used\n",
+      "I was called by Thread\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.start()\n",
+    "print(\"ill not wait for the sequence ill execute regardless becoz of thread being used\")\n",
+    "a.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I was called by Thread\n",
+      "Iam waiting for print msg to complete then ill print or ill execute\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.print_msg()\n",
+    "print(\"Iam waiting for print msg to complete then ill print or ill execute\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#when u use start function in the thread class it overruns the run method wherever \n",
+    "# the run method is mentioned this is how thread function works\n",
+    "\n",
+    "# when u use the join function then it will wait for the run function to complete \n",
+    "\n",
+    "#this is the benefit of the thread it executes the subsuqent lines when the program\n",
+    "#  has gone to sleep\n",
+    "\n",
+    "\n",
+    "#why we use thread?\n",
+    "# to achieve parallelism to simultanaoesly execute multiple blocks of code\n",
+    "#thats why we convert the pipeline to thread\n",
+    "\n",
+    "# start starts from the run function and then multiple tasks are divided into \n",
+    "# for faster computation\n",
+    "# anything between start and join it will execute in multiple threads but after join it\n",
+    "#  will be a normal sequenstial execution\n",
+    "\n",
+    "# then the join function makes all the threads wait for each other to complete\n",
+    "# and all the threads join  (its like different ppl taking diff routes to the airport \n",
+    "# and each waiting for each other to arrive)\n",
+    "\n",
+    "# i can only start any object of the thread class only once cant call it always \n",
+    "# while i can create a new object and the start the thread class and start it again \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#when u use start function in the thread class it overruns the run method"
+    "# its a good practice to not use many multi threads but to use only few threads"
    ]
   }
  ],
